# stock-manager

./: .gitignore  Home.py  controller.py  model.py  pyproject.toml
