[tool.poetry]
name = "stock-manager"
version = "0.1.0"
description = "Stock Manager with streamlit"
authors = ["W. Vaihau <38850344+WVaihau@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
streamlit = "^1.31.1"
google-api-python-client = "^2.118.0"
python-barcode = "^0.15.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
